# mistral-cli

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  README.md  agentbench_debug_report.md  context.py  fix_entrypoint.py  main.py  mistral_api.py  pyproject.toml  requirements.txt  test_bug.py  test_controller_session.py  test_output.txt  token_utils.py  worker_docker.py  worker_redis.py  worker_task_worker.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: benchmark.yaml
docs/: AGENTBENCH.md
planning/: 7-Day-MVP-Plan.md  codebase_walkthrough.md  implementation_plan.md
src/mistral_cli/: __init__.py  agent.py  agentbench.py  api.py  backup.py  benchmark.py  cli.py  config.py  context.py  critic.py  knowledge.py  mcp_client.py  memory.py  server.py  tokens.py  utils.py  verifier.py
src/mistral_cli/commands/: agent.py
src/mistral_cli/tools/: __init__.py  base.py  critic.py  files.py  filesystem.py  memory.py  project.py  semantic.py  shell.py  verifier.py
tests/: __init__.py  golden_tasks.json  test_agent.py  test_agentbench.py  test_cli.py  test_tools.py
