[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mistral-cli"
version = "0.5.0"
description = "A CLI tool to analyze Python code, identify bugs, and suggest fixes using Mistral AI"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Mistral CLI Contributors" }
]
keywords = ["mistral", "ai", "cli", "code-analysis", "bug-fixing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Debuggers",
]

dependencies = [
    "click>=8.1.3",
    "requests>=2.28.1",
    "python-dotenv>=0.21.0",
    "rich>=13.3.1",
    "prompt_toolkit>=3.0.0",
    "mistral-common>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "mypy>=1.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "pre-commit>=3.0.0",
]
rag = [
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0",
]
all = [
    "mistral-cli[rag]",
]

[project.scripts]
mistral = "mistral_cli.cli:cli"

[project.urls]
Homepage = "https://github.com/yourusername/mistral-cli"
Repository = "https://github.com/yourusername/mistral-cli"
Issues = "https://github.com/yourusername/mistral-cli/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/mistral_cli"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
